# bibReader

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFAST.in  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: base-template.md  bug_report.md  bug_report.yml
.github/workflows/: manual-publish.yml  publish-package.yml  publish-test.yml
bibReader/: __init__.py  _util.py  frame.py  loader.py  parser.py
examples/: bib_example.ipynb  ndd_member_update.ipynb  ndd_pubs_update.ipynb  usecase.ipynb
pandarize/: __init__.py  _util.py  frame.py  loader.py  parser.py
pandarize/config/: config.yaml
src/: pandarize.py  util.py
