[project]
name = "pandarize"
version = "0.0.2"
authors = [
  { name="Jong M. Shin", email="jshinm@gmail.com" },
]
description = "This project aims to turn all kinds of data structure/types into a nice tabulated form such as pandas DataFrame"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

